--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <input id="cardInput" type="number" value="0" min="0">
   <div id="spacer"></div>
-  <svg id="deck" xmlns="http://www.w3.org/2000/svg">
-    <path id="path" d="M 0 0 L 100 100" stroke="black" fill="transparent"/>
-  </svg>
+  <as-deck>
+    <!-- Starting cards -->
+  </as-deck>
 </body>
 
 </html>
