--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Deck of cards</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <script defer src="components/as-deck.js"></script>
 </head>
 
 <body>
@@ -14,6 +15,7 @@
   <div id="spacer"></div>
   <as-deck>
     <!-- Starting cards -->
+    <div style="width: 25px;">Thingy</div>
   </as-deck>
 </body>
 
