Added as-card, runs without errors. missing a lot of functionality at the moment.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
   <script defer src="components/as-deck.js"></script>
+  <script defer src="components/as-card.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,7 @@
   <div id="spacer"></div>
   <as-deck>
     <!-- Starting cards -->
-    <div style="width: 25px;">Thingy</div>
+    <as-card></as-card>
   </as-deck>
 </body>
 
