Updated styles and added card rotation during movement

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 
 <body>
-  <input id="cardInput" type="number" value="0" min="0">
-  <div id="spacer"></div>
+  <div id="spacer">
+    <input id="cardInput" type="number" value="0" min="0">
+  </div>
   <as-deck>
     <!-- Starting cards -->
-    <as-card></as-card>
+    <as-card>AIR</as-card>
+    <as-card>EARTH</as-card>
+    <as-card>WATER</as-card>
+    <as-card>FIRE</as-card>
   </as-deck>
 </body>
 
