Typescript conversion complete

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deck of cards</title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
-    <script defer src="components/as-deck.js"></script>
-    <script defer src="components/as-card.js"></script>
+    <link rel="stylesheet" href="src/style.css" />
+    <script defer src="src/script.ts"></script>
+    <script defer src="src/components/as-deck.ts"></script>
+    <script defer src="src/components/as-card.ts"></script>
   </head>
 
   <body>
