Add github actions for github pages deployment

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deck of cards</title>
     <link rel="stylesheet" href="src/style.css" />
-    <script defer src="src/script.ts"></script>
-    <script defer src="src/components/as-deck.ts"></script>
-    <script defer src="src/components/as-card.ts"></script>
+    <script defer type="module" src="src/script.ts"></script>
+    <script defer type="module" src="src/components/as-deck.ts"></script>
+    <script defer type="module" src="src/components/as-card.ts"></script>
   </head>
 
   <body>
